[gd_scene load_steps=17 format=3 uid="uid://vndtetnd2iix"]

[ext_resource type="Texture2D" uid="uid://dvf7ipmmmv8k0" path="res://Assets/Group.svg" id="1_1hko7"]
[ext_resource type="Script" path="res://Scenes/Scripts/manage_deck.gd" id="1_d8k7j"]
[ext_resource type="Theme" uid="uid://vdp0ma3noevw" path="res://Themes/HomeBtn.tres" id="2_7uyjk"]
[ext_resource type="Theme" uid="uid://bpg62mkgrlu4" path="res://Themes/MainTheme.tres" id="3_d6i5h"]
[ext_resource type="Texture2D" uid="uid://bcisnhvl0qque" path="res://Assets/Plus.svg" id="4_8xqsm"]
[ext_resource type="PackedScene" uid="uid://buf31y3lahf5b" path="res://Scenes/Components/Input.tscn" id="5_a3mwo"]
[ext_resource type="Script" path="res://Scenes/Scripts/goto_fill_selected_btn.gd" id="6_ykqfc"]
[ext_resource type="PackedScene" uid="uid://wymk35o873pe" path="res://Scenes/Components/DeckWordListComponent.tscn" id="7_63c63"]
[ext_resource type="Script" path="res://Scenes/Scripts/add_word_btn_panel.gd" id="7_ixlde"]
[ext_resource type="Texture2D" uid="uid://uhnfeddhutx" path="res://Assets/Trash.svg" id="8_2c5kw"]
[ext_resource type="Script" path="res://Scenes/Scripts/cancel_rmv_btn.gd" id="9_wkus6"]
[ext_resource type="Script" path="res://Scenes/Scripts/rmv_from_deck_btn.gd" id="10_mcdi5"]
[ext_resource type="Script" path="res://Scenes/Scripts/confirm_rvm_from_deck_btn.gd" id="12_j5434"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5eaj"]
bg_color = Color(0.278431, 0.741176, 0.658824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ruvf"]
bg_color = Color(0.839216, 0.180392, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvh4m"]
bg_color = Color(0.278431, 0.741176, 0.658824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ManageDeck" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 32.0
offset_right = 360.0
offset_bottom = 1152.0
grow_horizontal = 2
script = ExtResource("1_d8k7j")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(640, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="IconSVG" type="TextureRect" parent="VBoxContainer/Control"]
modulate = Color(0.278431, 0.741176, 0.658824, 1)
layout_mode = 1
offset_right = 124.0
offset_bottom = 60.0
texture = ExtResource("1_1hko7")
expand_mode = 2
stretch_mode = 4

[node name="Name" type="RichTextLabel" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[left][color=47BDA8][font_size=62] Gerenciar Categoria"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 200)
layout_mode = 2
theme = ExtResource("2_7uyjk")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 32.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="DeckName" type="RichTextLabel" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[left][color=47BDA8][font_size=32] Deck Name"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="GotoAddWordBtn" type="Panel" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q5eaj")

[node name="GotoFillSelectedBtn" type="Button" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/GotoAddWordBtn"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_d6i5h")
theme_override_font_sizes/font_size = 24
text = "Adicionar à Categoria"
icon = ExtResource("4_8xqsm")
expand_icon = true
script = ExtResource("6_ykqfc")

[node name="Input" parent="VBoxContainer/Panel/VBoxContainer" node_paths=PackedStringArray("filter_target") instance=ExtResource("5_a3mwo")]
layout_mode = 2
placeholder_text = "Pesquisar Palavra"
placeholder = "Pesquisar Palavra"
filter_target = NodePath("../../../WordList/DeckWordListComponent")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="WordList" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 728)
layout_mode = 2
theme = ExtResource("2_7uyjk")

[node name="DeckWordListComponent" parent="VBoxContainer/WordList" instance=ExtResource("7_63c63")]
layout_mode = 1

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RmvWordBtn" type="Panel" parent="VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3ruvf")
script = ExtResource("7_ixlde")

[node name="rmvFromDeckBtn" type="Button" parent="VBoxContainer/VBoxContainer/RmvWordBtn"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_d6i5h")
theme_override_font_sizes/font_size = 24
text = "Remover Palavras(s)"
icon = ExtResource("8_2c5kw")
expand_icon = true
script = ExtResource("10_mcdi5")

[node name="Confirmation" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="TextureRect" type="ColorRect" parent="Confirmation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Panel" type="Panel" parent="Confirmation"]
custom_minimum_size = Vector2(600, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7uyjk")

[node name="VBoxContainer" type="VBoxContainer" parent="Confirmation/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Confirmation/Panel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=black][font_size={36}]Tem Certeza?"
fit_content = true

[node name="VBoxContainer" type="HBoxContainer" parent="Confirmation/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Não" type="Panel" parent="Confirmation/Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_yvh4m")

[node name="CancelRmvBtn" type="Button" parent="Confirmation/Panel/VBoxContainer/VBoxContainer/Não"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_d6i5h")
theme_override_font_sizes/font_size = 24
text = "Cancelar"
expand_icon = true
script = ExtResource("9_wkus6")

[node name="RmvWordBtn" type="Panel" parent="Confirmation/Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_3ruvf")

[node name="ConfirmRvmFromDeckBtn" type="Button" parent="Confirmation/Panel/VBoxContainer/VBoxContainer/RmvWordBtn"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_d6i5h")
theme_override_font_sizes/font_size = 24
text = "Sim, Remover"
icon = ExtResource("8_2c5kw")
expand_icon = true
script = ExtResource("12_j5434")

[connection signal="pressed" from="VBoxContainer/Panel/VBoxContainer/HBoxContainer/GotoAddWordBtn/GotoFillSelectedBtn" to="VBoxContainer/Panel/VBoxContainer/HBoxContainer/GotoAddWordBtn/GotoFillSelectedBtn" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/RmvWordBtn/rmvFromDeckBtn" to="VBoxContainer/VBoxContainer/RmvWordBtn/rmvFromDeckBtn" method="_on_pressed"]
[connection signal="pressed" from="Confirmation/Panel/VBoxContainer/VBoxContainer/Não/CancelRmvBtn" to="Confirmation/Panel/VBoxContainer/VBoxContainer/Não/CancelRmvBtn" method="_on_pressed"]
[connection signal="pressed" from="Confirmation/Panel/VBoxContainer/VBoxContainer/RmvWordBtn/ConfirmRvmFromDeckBtn" to="Confirmation/Panel/VBoxContainer/VBoxContainer/RmvWordBtn/ConfirmRvmFromDeckBtn" method="_on_pressed"]
